# hmm-factor-analysis

./: .RData  .Rhistory  .gitignore  Untitled.ipynb  analyse_nmf.ipynb  data_process.ipynb  process_blucone.Rmd  process_lwscone.Rmd  pyproject.toml  read_data.ipynb  sandbox.ipynb  sparse_f_gibbs.R  sparse_f_vi.R  sparse_mf.Rmd  sync-data.sh  test_vi.py
hmcfa/: __init__.py  model.py
nb/: no_change_experiment.ipynb
results/no_change/: variational_params.h5
scripts/: gen_data_nochange.R  no_change.py  utils.R
slurm/: gibbs.slurm  slurm-51997862.out  slurm-51997863.out  slurm-51997864.out  slurm-52086084.out  slurm-52086086.out  slurm-52086087.out  slurm-52209467.out  slurm-52209472.out  slurm-52209478.out  vi.slurm
src/hmmfa/: evals.py  logger.yaml  model.py
